# catrees

./: pyproject.toml
catrees/: cli.py  db.py  display.py  inat.py
docs/tdd/: trail-observations.md
tests/: test_trail_obs.py
